# jobfinder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  justfile  main.py  pyproject.toml  pyrightconfig.json  test_qualifications.csv
.github/: copilot-instructions.md
.github/workflows/: pytest.yml  release.yml
data/: README.md
doc/: roadmap.md  walkthrough.md
src/jobfinder/: __init__.py  bootstrap.py  config.py  constants.py  main.py  model.py  session.py
src/jobfinder/adapters/: chat.py  chat_client.py  elasticsearch_client.py
src/jobfinder/adapters/chat/: chat_client.py  ollama_chat.py  openai_chat.py
src/jobfinder/adapters/comprehend/: comprehend_classifier_demo.py  comprehend_demo_resources.py  comprehend_topic_modeler.py
src/jobfinder/adapters/db/: postgres_client.py
src/jobfinder/adapters/embedding/: embedding_client.py
src/jobfinder/adapters/search/: elasticsearch_client.py
src/jobfinder/domain/: constants.py  indexmapping.py  models.py
src/jobfinder/pages/: data_management.py  display_filters.py  find_jobs.py  insert_record.py  job_details.py  listings_overview.py  scoring_util.py  scrape_jobs.py  summarization_util.py
src/jobfinder/pages/prompt/: edit_prompt.py  helpers.py  prompt_analytics.py  prompt_executor.py  prompt_manager.py
src/jobfinder/services/: data_service.py  generative_service.py  scoring_service.py  summarization_service.py
src/jobfinder/utils/: __init__.py  loader.py  persistence.py  service_helpers.py
src/jobfinder/views/: add_record.py  common.py  data_management.py  display_filters.py  display_stats.py  find_jobs.py  individual_job_details.py  listings_overview.py  prompt_manager.py  scoring_util.py  summarization_util.py
src/jobfinder/views/prompt/: constants.py  edit_prompt.py  helpers.py  prompt_executor.py  prompt_manager.py  template_builder.py
tests/: conftest.py  docker-compose.yml
tests/data/: test_jobs.csv
tests/integration/: conftest.py
tests/integration/jobfinder/: test_app.py
tests/integration/jobfinder/adapters/: test_chat_client.py  test_elasticsearch_client.py  test_embeddingclient.py  test_postgres_client.py
tests/integration/jobfinder/services/: test_data_service.py  test_generativeservice.py
tests/jobfinder/: test_app.py  test_models.py
tests/jobfinder/adapters/: test_elasticsearch_client.py
tests/jobfinder/domain/: test_models.py
tests/jobfinder/services/: summarization.py
tests/mocks/: initializer.json
tests/unit/jobfinder/domain/: test_models.py
